:bug: fix: Submit the first section alignment (completed)

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html{
 /*menu de navegação está pronto, só precisa ficar fixo na tela */
 .header-menu{
     width: 100%;
-    height: 100vh;
     background-color: #0b6050;
 }
 
@@ -27,7 +26,8 @@ html{
     padding-bottom: 20px; 
     position: relative;
     margin-bottom: auto;
-    border-bottom: 2px solid #0b6050;  
+    border-bottom: 2px solid #0b6050;
+    transition: .7s; 
 }
 
 
@@ -112,13 +112,26 @@ centro do browser. O container é invisível. */
 
 
 #inicio{
-    display: block;
+    background-image: url("img/fundo-tech.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center; 
     width: 100%;
-    height: 100%;  
+    height: 83vh;  
+}
+
+.fundo{
+    position: absolute;
+}
+
+.cor-de-fundo{
+    width: 100%;
+    border-top: 69px solid #0b6050;
 }
 
 
